# skykey-firmware

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
common/Kconfig/: Kconfig  app_ZDebug.conf
configuration/nrf52840dk_nrf52840/: app_ZDebug.conf  buttons_def.h  click_detector_def.h  nrf52840dk_nrf52840.overlay
configuration/nrf9160dk_nrf9160/: app_ZDebug.conf  buttons_def.h  click_detector_def.h  nrf9160dk_nrf9160.overlay
configuration/nrf9160dk_nrf9160_ns/: app_ZDebug.conf  buttons_def.h
configuration/nrf9160dk_nrf9160ns/: app_ZDebug.conf  click_detector_def.h  nrf9160dk_nrf9160ns.overlay  st7789v.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/dfrobot_sen0348/: CMakeLists.txt  Kconfig  api.h  driver.c  sen0348.h
drivers/fingerprint/: CMakeLists.txt  api.h
drivers/fingerprint/dfrobot_sen0348/: CMakeLists.txt  Kconfig  driver.c  sen0348.h
nrf52840/: CMakeLists.txt  Kconfig
nrf52840/configuration/nrf9160dk_nrf52840/: app_ZDebug.conf
nrf52840/src/: main.c
nrf52840/src/events/: CMakeLists.txt
nrf9160/: CMakeLists.txt  Kconfig
nrf9160/configuration/nrf9160dk_nrf9160_ns/: app_ZDebug.conf  nrf9160dk_nrf9160_ns.overlay
nrf9160/configuration/nrf9160dk_nrf9160ns/: nrf9160dk_nrf9160ns.overlay
nrf9160/drivers/fingerprint/: Kconfig
nrf9160/drivers/fingerprint/dfrobot_sen0348/: CMakeLists.txt  sen0348.h
nrf9160/dts/bindings/: dfrobot,sen0348.yaml
nrf9160/src/display/: CMakeLists.txt  lvgl_interface.c  lvgl_interface.h
nrf9160/src/display/assets/: bluetooth_w60px.c  (+1 more)
nrf9160/src/events/: Kconfig  cloud_module_event.c  cloud_module_event.h  display_module_event.c  display_module_event.h  modem_module_event.h  password_module_event.c  password_module_event.h  uart_data_event.c  uart_transmit_event.h
nrf9160/src/modules/: Kconfig.cloud_module  Kconfig.download_module  Kconfig.fingerprint_module  Kconfig.modem_module  Kconfig.password_module  cloud_module.c  display_module.c  download_module.c  modem_module.c  modules_common.c
nrf9160/src/util/: CMakeLists.txt  Kconfig  cjson_util.h  file_util.c  file_util.h  parse_util.h
src/: main.c
src/display/: CMakeLists.txt  display_ui.c  display_ui.h  lvgl_interface.c  lvgl_interface.h
src/display/assets/: fingerprint_w100px.c  nordic_semi_text_w150px.c  nordic_semi_w150px.c
src/events/: CMakeLists.txt  Kconfig  cloud_module_event.c  cloud_module_event.h  display_module_event.c  display_module_event.h  download_module_event.c  download_module_event.h  lock_module_event.c  lock_module_event.h  modem_module_event.c  password_module_event.c  password_module_event.h  uart_transmit_event.c
src/modules/: CMakeLists.txt  Kconfig  Kconfig.cloud_module  Kconfig.display_module  Kconfig.download_module  Kconfig.lock_module  Kconfig.password_module  cloud_module.c  display_module.c  download_module.c  fingerprint_module.c  fingerprint_sensor.c  fingerprint_sensor.h  lock_module.c  modem_module.c  modules_common.c  modules_common.h  password_module.c  test.c  uart.c
src/util/: CMakeLists.txt  Kconfig  file_util.c  file_util.h  parse_util.c
